force-app/main/default/objects/SIS_Sequence_ressource__c/SIS_Sequence_ressource__c.object-meta.xml
<CustomObject>
    <description>Objet de jonction entre les séquences, les ressources et les cours.
Les ressources sont associées aux séquences, qui sont elles mêmes associés au cours.

Les créations des sequences ressources sont générés via différents flux d&apos;écran.</description>
    <label>Sequence ressource</label>
    <nameField>
        <label>Nom de Ressource de séquence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence ressources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>