force-app/main/default/objects/SIS_Sequence_ressource__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Ressources bibliographiques du cours</relationshipLabel>
    <relationshipName>Ressources_cours</relationshipName>
    <type>Lookup</type>
</CustomField>