force-app/main/default/objects/SIS_Sequence_ressource__c/fields/Lien_de_la_ressource__c.field-meta.xml
<CustomField>
    <fullName>Lien_de_la_ressource__c</fullName>
    <formula>SIS_Ressource_bibliographique__r.SIS_Ressource_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien de la ressource</label>
    <type>Text</type>
</CustomField>