force-app/main/default/objects/SIS_Sequence_ressource__c/fields/SIS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SIS_External_ID__c</fullName>
    <label>Identifiant Externe</label>
    <type>TextArea</type>
</CustomField>