force-app/main/default/objects/SIS_Sequence_ressource__c/fields/SIS_Ressource_bibliographique__c.field-meta.xml
<CustomField>
    <fullName>SIS_Ressource_bibliographique__c</fullName>
    <label>Ressource bibliographique</label>
    <referenceTo>SIS_Bibliography__c</referenceTo>
    <relationshipLabel>Séquences associées</relationshipLabel>
    <relationshipName>SIS_ressource_sequence</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>