force-app/main/default/objects/SIS_Sequence_ressource__c/fields/SIS_Ressource_Name__c.field-meta.xml
<CustomField>
    <fullName>SIS_Ressource_Name__c</fullName>
    <formula>SIS_Ressource_bibliographique__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom de la ressource</label>
    <type>Text</type>
</CustomField>