force-app/main/default/objects/SIS_Sequence_ressource__c/fields/SIS_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SIS_Sequence__c</fullName>
    <label>Séquence du cours</label>
    <referenceTo>SIS_Course_Sequence__c</referenceTo>
    <relationshipLabel>Sequence ressources</relationshipLabel>
    <relationshipName>SIS_Sequence</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>